tests/paczka1/fuzzy1/38181507.err
Error in line 3: pGnR5 A671 4,6
Error in line 4: MByAfr5w6 S29 21,3
Error in line 10: MByAfr5w6 S29 78,1
Error in line 11: 69LXNPfUjt A326 22,3
Error in line 23: pGnR5 S29 25,6
Error in line 22: 69LXNPfUjt S323 89,7
